--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,14 +12,14 @@
 
 html,
 body {
-  max-width: 100vw;
+  max-inline-size: 100vw;
   overflow-x: hidden;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
